--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
                 <button onclick="addToCart('Shirt', 5555, 'images/shirt men.jpeg')">Add to Cart</button>
             </div>
             <div class="product">
-                <img src="\images\oant.jpg" alt="Formal Pant">
+                <img src="images/pant.jpg" alt="Formal Pant">
                 <h3>Formal Pant</h3>
                 <p>₹5333.00</p>
-                <button onclick="addToCart('Formal Pant', 999, '/images/oant.jpg')">Add to Cart</button>
+                <button onclick="addToCart('Formal Pant', 999, 'images/pant.jpg')">Add to Cart</button>
             </div>
         </div>
     </section>
